config-root/namespaces/jx-staging/jx3-golang-http-second/deployment.yaml
# Source: jx3-golang-http-second/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx3-golang-http-second-jx3-golang-http-second
  labels:
    draft: draft-app
    chart: "jx3-golang-http-second-0.0.2"
    gitops.jenkins-x.io/pipeline: 'environment'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: jx3-golang-http-second-jx3-golang-http-second
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx3-golang-http-second-jx3-golang-http-second
    spec:
      containers:
      - name: jx3-golang-http-second
        image: "gcr.io/jxtest-199909/jx3-golang-http-second:0.0.2"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
      terminationGracePeriodSeconds:
