config-root/namespaces/jx-staging/jx3-golang-http-second/service.yaml
# Source: jx3-golang-http-second/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jx3-golang-http-second
  labels:
    chart: "jx3-golang-http-second-0.0.2"
    gitops.jenkins-x.io/pipeline: 'environment'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: jx3-golang-http-second-jx3-golang-http-second
