config-root/namespaces/jx-staging/jx3-golang-http-second/ingress.yaml
# Source: jx3-golang-http-second/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jx3-golang-http-second
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'environment'
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: jx3-golang-http-second
          servicePort: 80
    host: jx3-golang-http-second-jx.35.226.230.4.nip.io
